* BUG#7961 Fix possible holes in invoice numbering if an error is raised during the processing
* BUG#7539 Add invoices deletion authorization to the financial management group
* BUG#7413 Significantly improve concurency performances on the invoice set number

Version 1.14 - 2017-11-09
* BUG#7118 Override of the update fiscal year wizard to support invoice sequences
* BUG#6930 Replace transaction context by server context when setting _payment_term_change
* BUG#6709 Restore the get_invoice_sequence on the periods
* FEA#6453 Add filters handlers on invoices for the reporting
* FEA#6234 New quarter option on payment term to synchronise a due date at the end of the quarter for example
* FEA#6116 Invoice relate on a party only shows contract invoices instead of invoices of all business kinds

Version 1.12 - 2017-04-28
* FEA#0000 Cancel button on invoice could be confused with the action to close the window
* FEA#0000 Cancel button on invoice could be confused with the action to close the window so the action is not displayed any more on the form view but in the action toolbar

Version 1.10 - 2016-11-02
* FEA#0000 Allow to modify invoicing date in change payment term invoice wizard
* FEA#0000 Add reconciliation date to invoices
* FEA#0000 Configure and manage taxes included per product / invoice

Version 1.8 - 2016-07-06
* FEA#0000 Add wizard to change payment terms of a posted invoice

Version 1.6 - 2015-12-23
* FEA#0000 Allow to define default payment term for customer invoice in configuration
* FEA#0000 Make invoice printable

Version 1.4 - 2015-05-29
* FEA#0000 New icons based on state for invoice

Version 1.3 - 2015-01-22
* FEA#0000 Add invoice consulation group

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation